2005-03-27  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update version to 2.11.0

2005-03-09  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update version to 2.10.1

==================== 2.10.0 ===================
	
2005-03-08  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: update for 2.10.0

2005-02-28  Jody Goldberg <jody@gnome.org>

	* gnome-settings-daemon/gnome-settings-keyboard-xkb.c
	(activation_error) : don't bother VNC users with warnings of XKB
	  breakage, we already know it is not going to work.

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update version to 2.9.92

==================== 2.9.91 ===================

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* configure.in:
	* capplets/Makefile.am:
	the previous change is not needed, changed POTFILES.in.
	
2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* configure.in:
	* capplets/Makefile.am:
	include the "about-me" capplet files to the tarball to fix the tarball
	build.

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: updated for the 2.9.91 release.

2005-02-06  Sergey V. Udaltsov <svu@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in,
	gnome-settings-daemon/gnome-settings-keyboard-xkb.c,
	gnome-settings-daemon/modmap-dialog.glade: providing ability to
	suppress the "x sysconfig changed" warning message, fixing #150435

2005-02-03  Leena Gunda  <leena.gunda@wipro.com>

	* configure.in: Check for screensaver functionality in libXext.so
	also when deciding to build typing-break. Fixes bug #155461.

2004-12-27  Sergey V. Udaltsov <svu@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in:
	Changing the default value for "handleIndicators" to false, 
	as requested in #161343

2004-12-20  Sebastien Bacher  <seb128@debian.org>

	* configure.in: post release bump to 2.9.5.
