@@ -1,3 +1,10 @@
+2005-03-27  Sebastien Bacher  <seb128@debian.org>
+
+	* control-center-categories.c: (populate_category),
+	(read_categories_from_menu_directory),
+	(control_center_get_information): update to the new libgnome-menu API,
+	patch from Mark McLoughlin <markmc@redhat.com>.
+
 2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* control-center.c: (create_control_center): Fix a
