@@ -1,5 +1,9 @@
 2005-03-27  Sebastien Bacher  <seb128@debian.org>
 
+	* configure.in: require libgnome-menu 2.11.1 for the new API.
+
+2005-03-27  Sebastien Bacher  <seb128@debian.org>
+
 	* configure.in: update version to 2.11.0
 
 2005-03-09  Adi Attar  <aattar@cvs.gnome.org>
